--- a/src/stylesheets/_2018-custom.scss
+++ b/src/stylesheets/_2018-custom.scss
@@ -117,6 +117,7 @@ ol li {
   color: $white;
   font-family: $montserrat;
   font-weight: 400;
+  top: 0;
   &:before {
     border-top-color: $lighter-gray;
   }
